charts/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      hostNetwork: false
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.108.0-b.84
          ports:
            - containerPort: 3000
              name: setup
            - containerPort: 80
              name: http
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
              hostPort: 53
            - containerPort: 53
              name: dns-udp
              protocol: UDP
              hostPort: 53
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 2
            timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/work
            - name: config
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: data
          hostPath:
            path: /mnt/tank-hd/adguard/work
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /mnt/tank-hd/adguard/conf
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: core
spec:
  selector:
    app: adguard
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: setup
      port: 3000
      targetPort: 3000
